add offline support for weather

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,10 @@ dependencies {
 
     // storage
     implementation("androidx.preference:preference-ktx:1.1.1")
+    implementation("androidx.room:room-runtime:$room_version")
+//    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
 
     // network
     implementation "com.squareup.retrofit2:retrofit:2.7.1"
