--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.4.32"
     ext.navigation_version = "2.3.5"
+    ext.room_version = "2.3.0"
     repositories {
         google()
         jcenter()
