--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     // storage
     implementation("androidx.preference:preference-ktx:1.1.1")
     implementation("androidx.room:room-runtime:$room_version")
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 //    annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
@@ -110,6 +111,9 @@ dependencies {
     // Logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Permission Helper
+    implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.0'
 
     testImplementation 'junit:junit:4.+'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
