--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "http://jitpack.io/" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
@@ -21,6 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "http://jitpack.io/" }
     }
 }
 
