--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     implementation("androidx.preference:preference-ktx:1.1.1")
     implementation("androidx.room:room-runtime:$room_version")
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
 //    annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
