--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,31 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    // Always show the result of every unit test, even if it passes.
+    testOptions.unitTests {
+        includeAndroidResources = true
+
+        all {
+            testLogging {
+                events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+            }
+        }
+    }
+
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude("META-INF/*.kotlin_module")
+    }
 }
 
 dependencies {
@@ -117,8 +142,20 @@ dependencies {
     implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.0'
 
     testImplementation 'junit:junit:4.+'
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+//    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation "org.jetbrains.kotlin:kotlin-test"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
+
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "io.mockk:mockk:1.9.3"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit"
 }
