--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,6 +141,11 @@ dependencies {
     // Permission Helper
     implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.0'
 
+    // WorkManager Kotlin + coroutines
+    implementation("androidx.work:work-runtime-ktx:2.5.0")
+
+    implementation 'net.danlew:android.joda:2.10.9.1'
+
     testImplementation 'junit:junit:4.+'
 //    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
