--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
-    ext.navigation_version = "2.3.5"
-    ext.room_version = "2.3.0"
+    ext.kotlin_version = "1.7.20"
+    ext.navigation_version = "2.5.3"
+    ext.room_version = "2.4.3"
     repositories {
         google()
         jcenter()
-        maven { url "http://jitpack.io/" }
+        maven {
+            url "https://jitpack.io/"
+        }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 
@@ -17,12 +19,16 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
-
+plugins {
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
+}
 allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "http://jitpack.io/" }
+        maven {
+            url "https://jitpack.io/"
+        }
     }
 }
 
