--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ android {
         exclude 'META-INF/LGPL2.1'
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/LICENSE*'
         exclude 'META-INF/license.txt'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/NOTICE.txt'
@@ -153,7 +153,7 @@ dependencies {
 //    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation "io.mockk:mockk:1.13.3"
     testImplementation "org.jetbrains.kotlin:kotlin-test"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit"
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
@@ -163,7 +163,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "io.mockk:mockk:1.9.3"
+    androidTestImplementation "io.mockk:mockk:1.13.3"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-test"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit"
 }
