--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,8 +110,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
 
     // DI
-    implementation 'org.kodein.di:kodein-di-generic-jvm:6.4.1'
-    implementation 'org.kodein.di:kodein-di-framework-android-x:6.4.1'
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 
@@ -146,6 +144,8 @@ dependencies {
 
     // WorkManager Kotlin + coroutines
     implementation("androidx.work:work-runtime-ktx:2.7.1")
+    implementation 'androidx.hilt:hilt-work:1.0.0'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     implementation 'net.danlew:android.joda:2.10.9.1'
 
